<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/tvRecipeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/example"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btnViewRecipeDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnViewRecipeDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/view_recipe"
        android:text="👁️‍🗨"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRecipeServings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servings_amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvRecipeCalories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecipeTitle" />

    <TextView
        android:id="@+id/tvRecipeCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount_cal_per_serving"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnViewRecipeDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecipeTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>