<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <Button
        android:id="@+id/btnReturnToRecipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="⟲"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDeleteRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="❌️"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvRecipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/title"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/btnReturnToRecipes" />

    <TextView
        android:id="@+id/tvRecipeServings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/servings"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tvRecipeTitle" />

    <TextView
        android:id="@+id/tvRecipeCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cal_per_serving"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/tvRecipeServings" />

    <TextView
        android:id="@+id/tvRecipeIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecipeCalories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecipeIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvRecipeIngredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvRecipeInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvRecipeIngredients" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecipeInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvRecipeInstructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>